# snaplm

./: README.md  pyproject.toml
docs/: architecture.md  cli_design.md  python_packaging.md  research.md  roadmap.md
experiments/: hardware_detection.md  test_hardware.py
src/snaplm/: cli.py  hardware.py  main.py
